--- a/.github/waka-readme.yml
+++ b/.github/waka-readme.yml
@@ -1,11 +1,24 @@
-github_token: ${{ secrets.GH_TOKEN }}
-waka_time_api_key: ${{ secrets.WAKATIME_API_KEY }}
-show_title: true
-show_time: true
-show_total: true
-show_masked_time: true
-theme: dark
-timezone: Asia/Manila
-username: piitasan
-commit_message: 📊 Updated WakaTime stats
-max_languages: 10
+name: WakaTime Stats
+
+on:
+  schedule:
+    - cron: "0 0 * * *" 
+  workflow_dispatch:
+
+jobs:
+  update-readme:
+    name: Update WakaTime Readme Stats
+    runs-on: ubuntu-latest
+    steps:
+      - uses: anmol098/waka-readme-stats@master
+        with:
+          WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          SHOW_TOTAL_CODE_TIME: "true"
+          SHOW_LANGUAGE: "true"
+          SHOW_TIMEZONE: "true"
+          SHOW_OS: "true"
+          SHOW_EDITORS: "true"
+          SHOW_PROJECTS: "true"
+          SHOW_LINES_OF_CODE: "true"
+          SHOW_PROFILE_VIEWS: "false"
